--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -1,13 +1,23 @@
 @use 'base/variables' as v;
+@use 'base/mixins' as m;
 
 .header{
   padding: 5rem 0;
+  position: relative;
+  @include m.color;
 
   &::before{
     content: '';
+    position: absolute;
     background-color: v.$negro ;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    opacity: .6;
   }
   .contenido-header {
+    position: relative;
 
   }
 }
@@ -15,4 +25,6 @@
 //Header de cada pagina
 .header-inicio {
   background-image: url(../img/header_inicio.jpg);
+
+  @include m.color;
 }
